--- a/ShareTripSDK/Classes/MyBL/TVCells/AllServicesButtonCell.xib
+++ b/ShareTripSDK/Classes/MyBL/TVCells/AllServicesButtonCell.xib
@@ -37,7 +37,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Air" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oG1-Au-yYn">
                                                         <rect key="frame" x="50.333333333333329" y="85" width="18" height="17"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
@@ -50,7 +50,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="yZA-Lq-9xk" firstAttribute="leading" secondItem="HwI-Vt-abu" secondAttribute="leading" id="1ec-uU-gd2"/>
                                             <constraint firstAttribute="bottom" secondItem="yZA-Lq-9xk" secondAttribute="bottom" id="8Qu-Ji-5yn"/>
@@ -75,7 +75,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hotels" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDE-iZ-MEN">
                                                         <rect key="frame" x="38.333333333333314" y="85" width="41.666666666666657" height="17"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
@@ -88,7 +88,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="tS9-tg-iah" firstAttribute="leading" secondItem="l6W-Tg-Tgc" secondAttribute="leading" id="2Y0-d7-Wfn"/>
                                             <constraint firstAttribute="trailing" secondItem="tS9-tg-iah" secondAttribute="trailing" id="3bD-ep-YsT"/>
@@ -113,7 +113,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ets-nU-sHm">
                                                         <rect key="frame" x="45.333333333333314" y="85" width="27.666666666666671" height="17"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
@@ -126,7 +126,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="SJg-mX-EAm" secondAttribute="trailing" id="3Mh-VM-J0x"/>
                                             <constraint firstItem="SJg-mX-EAm" firstAttribute="leading" secondItem="Lvf-QI-dg6" secondAttribute="leading" id="6if-BU-7AJ"/>
@@ -141,7 +141,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="UUT-oz-av4" firstAttribute="top" secondItem="aI7-kc-Rpz" secondAttribute="top" constant="16" id="2kI-YD-40X"/>
                             <constraint firstAttribute="trailing" secondItem="UUT-oz-av4" secondAttribute="trailing" constant="16" id="O8H-xj-uuS"/>
@@ -175,9 +175,6 @@
         <image name="airplane-icon" width="40" height="40"/>
         <image name="hotel-icon" width="40" height="40"/>
         <image name="visa-icon" width="32" height="32"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
