--- a/ShareTripSDK/Classes/STCoreKit/Views/Calendar/JTCalendarView.xib
+++ b/ShareTripSDK/Classes/STCoreKit/Views/Calendar/JTCalendarView.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="seG-EU-oFJ" customClass="JTCalendarView" customModule="ShareTrip" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="seG-EU-oFJ" customClass="JTCalendarView" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -60,7 +60,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="NvE-lu-Bx0" firstAttribute="leading" secondItem="Khz-qJ-LHc" secondAttribute="trailing" constant="8" id="0Hi-EZ-NGl"/>
                                         <constraint firstItem="Khz-qJ-LHc" firstAttribute="leading" secondItem="9og-xQ-URp" secondAttribute="leading" constant="16" id="4Zm-NO-ATy"/>
@@ -93,7 +93,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="iRK-Y4-W8t" firstAttribute="leading" secondItem="NXr-w4-4Ay" secondAttribute="leading" constant="16" id="Hnm-gS-rFy"/>
                                         <constraint firstItem="iRK-Y4-W8t" firstAttribute="top" secondItem="NXr-w4-4Ay" secondAttribute="top" id="Ich-Fl-eP8"/>
@@ -104,6 +104,7 @@
                                     </constraints>
                                 </view>
                             </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -115,7 +116,7 @@
                         <constraint firstItem="8hi-Cj-Z3Z" firstAttribute="top" secondItem="LdG-09-qAP" secondAttribute="top" constant="16" id="qsP-l6-0m4"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85l-hi-INH">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85l-hi-INH">
                     <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                     <color key="backgroundColor" red="0.094117647060000004" green="0.50980392159999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -130,6 +131,7 @@
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="uHV-8f-c0w"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="uHV-8f-c0w" firstAttribute="trailing" secondItem="zaJ-yG-qZ1" secondAttribute="trailing" constant="10" id="UYu-NL-j6M"/>
@@ -143,7 +145,6 @@
                 <constraint firstItem="LdG-09-qAP" firstAttribute="bottom" secondItem="85l-hi-INH" secondAttribute="top" constant="16" id="mfL-jm-rVb"/>
                 <constraint firstItem="zaJ-yG-qZ1" firstAttribute="bottom" secondItem="LdG-09-qAP" secondAttribute="top" constant="-8" id="nJe-rg-hOH"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="uHV-8f-c0w"/>
             <connections>
                 <outlet property="applyButton" destination="85l-hi-INH" id="K3N-1Y-h74"/>
                 <outlet property="calendar" destination="zaJ-yG-qZ1" id="mf1-Lp-a7T"/>
