--- a/ShareTripSDK/Classes/STFlightKit/Views/Details/TVCell/FlightLegCardCell.xib
+++ b/ShareTripSDK/Classes/STFlightKit/Views/Details/TVCell/FlightLegCardCell.xib
@@ -79,6 +79,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="xIj-BZ-EG4" firstAttribute="leading" secondItem="Hu4-fu-xRu" secondAttribute="trailing" constant="4" id="3WY-B6-HOA"/>
                                             <constraint firstItem="t6V-d7-SUs" firstAttribute="leading" secondItem="O2b-za-BCj" secondAttribute="leading" id="Gx3-Wm-j1s"/>
@@ -112,6 +113,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="DKO-4X-ZsB" firstAttribute="leading" secondItem="oaC-5k-0O5" secondAttribute="leading" id="0Kk-gQ-30r"/>
                                             <constraint firstItem="DKO-4X-ZsB" firstAttribute="top" secondItem="oaC-5k-0O5" secondAttribute="top" id="5g4-6b-aKO"/>
@@ -129,6 +131,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="nLv-GC-UGs" firstAttribute="top" secondItem="O2b-za-BCj" secondAttribute="bottom" constant="4" id="2Hx-Bw-zlj"/>
                                     <constraint firstItem="O2b-za-BCj" firstAttribute="leading" secondItem="2e1-a7-GDg" secondAttribute="trailing" constant="8" id="D4j-Mi-W65"/>
@@ -197,7 +200,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sat, Dec 18, 2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44Q-jS-iis">
                                 <rect key="frame" x="16" y="138" width="101.5" height="20"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow-right-mono" translatesAutoresizingMaskIntoConstraints="NO" id="4Mw-BI-6Ju">
@@ -214,7 +217,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="44Q-jS-iis" firstAttribute="top" secondItem="a6M-JB-8PK" secondAttribute="bottom" constant="12" id="21W-Qd-kq1"/>
                             <constraint firstItem="a6M-JB-8PK" firstAttribute="trailing" secondItem="dRm-he-rGJ" secondAttribute="trailing" id="EPn-uV-m1h"/>
